--- a/Regoin_Champ/MainWindow.xaml
+++ b/Regoin_Champ/MainWindow.xaml
@@ -14,9 +14,11 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Label Content="Введите логин" Height="20" VerticalAlignment="Top"/>
-            <TextBox Text="{Binding Login}" Width="150" Height="30"/>
+            <TextBlock Height="20" x:Name="errorLogin" Foreground="Red"/>
+            <TextBox Text="{Binding Login}" x:Name="loginBox" Width="150" Height="30"/>
             <Label Content="Введите пароль" Height="20"/>
-            <PasswordBox x:Name="passwordBox" MaxLength="16"
+            <TextBlock Height="20" x:Name="errorPassword" Foreground="Red"/>
+            <PasswordBox  x:Name="passwordBox" MaxLength="16"
               Width="150" Height="30" PasswordChanged="passwordBox_PasswordChanged" />
             <CheckBox Name="revealModeCheckBox" Content="Show password"
               IsChecked="False" Checked="revealModeCheckBox_Checked" Unchecked="revealModeCheckBox_Checked"
@@ -24,7 +26,15 @@
             <TextBlock x:Name="statusText" Margin="10" HorizontalAlignment="Center" />
         </StackPanel>
         <StackPanel Grid.Row="2">
-            <Button Content="Войти" Width="120"/>
+            <Button Content="Войти" Click="Enter_Click" Width="120"/>
         </StackPanel>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="90"/>
+            </Grid.ColumnDefinitions>
+
+            <Image Source="logo.png" Grid.Column="1"/>
+        </Grid>
     </Grid>
 </Window>
