--- a/Regoin_Champ/MainWindow.xaml
+++ b/Regoin_Champ/MainWindow.xaml
@@ -12,10 +12,28 @@
             <RowDefinition/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" DataContext="{Binding LogInfo}">
             <Label Content="Введите логин" Height="20" VerticalAlignment="Top"/>
             <TextBlock Height="20" x:Name="errorLogin" Foreground="Red"/>
-            <TextBox Text="{Binding Login}" x:Name="loginBox" Width="150" Height="30"/>
+            <TextBox x:Name="loginBox" Width="150" Height="30" >
+                <Validation.ErrorTemplate>
+                    <ControlTemplate>
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Foreground="Red" FontSize="16" FontWeight="Bold" Text="{Binding [0].ErrorContent}"/>
+                            <Border BorderBrush="Violet" BorderThickness="2">
+                                <AdornedElementPlaceholder />
+                            </Border>
+                        </StackPanel>
+                    </ControlTemplate>
+                </Validation.ErrorTemplate>
+                <TextBox.Text>
+                    <Binding Path="Login" >
+                        <Binding.ValidationRules>
+                            <DataErrorValidationRule />
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             <Label Content="Введите пароль" Height="20"/>
             <TextBlock Height="20" x:Name="errorPassword" Foreground="Red"/>
             <PasswordBox  x:Name="passwordBox" MaxLength="16"
